test/spec_vectors/local_set/fail/module_12.wat
(module (func $type-param-arg-empty-vs-num-in-then (param i32) (i32.const 0) (if (i32.const 1) (then (local.set 0)))))